--- a/package.json
+++ b/package.json
@@ -14,19 +14,20 @@
     "expo": "~53.0.20",
     "expo-location": "~18.1.6",
     "expo-status-bar": "~2.2.3",
+    "expo-task-manager": "~13.1.6",
+    "geolib": "^3.3.4",
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-maps": "^1.20.1",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "socket.io-client": "^4.8.1",
-    "expo-task-manager": "~13.1.6"
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "typescript": "~5.8.3",
-    "@types/react": "~19.0.10"
+    "@types/react": "~19.0.10",
+    "typescript": "~5.8.3"
   },
   "private": true
 }
