--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^7.1.16",
     "@react-navigation/native-stack": "^7.3.23",
     "expo": "~53.0.22",
+    "expo-device": "~7.1.4",
     "expo-location": "~18.1.6",
     "expo-notifications": "~0.31.4",
     "expo-status-bar": "~2.2.3",
@@ -25,8 +26,9 @@
     "react-native-maps": "^1.20.1",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
+    "sms": "^0.0.13",
     "socket.io-client": "^4.8.1",
-    "expo-device": "~7.1.4"
+    "expo-sms": "~13.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
