--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rydz-safetyapp",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server1.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -11,6 +11,7 @@
     "build:ios": "expo build:ios"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/native": "^7.1.16",
     "@react-navigation/native-stack": "^7.3.23",
     "cors": "^2.8.5",
