--- a/backend/ride-tracking-server/package.json
+++ b/backend/ride-tracking-server/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "ride-tracking-server",
   "version": "1.0.0",
@@ -11,7 +10,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
+    "firebase-admin": "^13.4.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.0.0",
     "socket.io": "^4.8.1"
   }
