--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rydz-safetyapp",
   "version": "1.0.0",
-  "main": "server1.js",
+  "main": "index.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -14,7 +14,6 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/native": "^7.1.16",
     "@react-navigation/native-stack": "^7.3.23",
-    "cors": "^2.8.5",
     "expo": "~53.0.22",
     "expo-device": "~7.1.4",
     "expo-location": "~18.1.6",
@@ -24,8 +23,6 @@
     "expo-task-manager": "~13.1.6",
     "express": "^5.1.0",
     "geolib": "^3.3.4",
-    "mongoose": "^8.18.0",
-    "node-fetch": "^3.3.2",
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
@@ -33,7 +30,6 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "sms": "^0.0.13",
-    "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
