--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,20 +1,17 @@
 {
   "name": "rydz-safetyapp",
   "version": "1.0.0",
-  "main": "server1.js",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
-    "build:android": "expo build:android",
-    "build:ios": "expo build:ios"
+    "web": "expo start --web"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/native": "^7.1.16",
     "@react-navigation/native-stack": "^7.3.23",
-    "cors": "^2.8.5",
     "expo": "~53.0.22",
     "expo-device": "~7.1.4",
     "expo-location": "~18.1.6",
@@ -22,38 +19,17 @@
     "expo-sms": "~13.1.4",
     "expo-status-bar": "~2.2.3",
     "expo-task-manager": "~13.1.6",
-    "express": "^5.1.0",
     "geolib": "^3.3.4",
-    "mongoose": "^8.18.0",
-    "node-fetch": "^3.3.2",
-    "react": "19.0.0",
-    "react-native": "0.79.5",
+    "react": "18.3.1",
+    "react-native": "0.76.3",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-maps": "^1.20.1",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "sms": "^0.0.13",
-    "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~19.0.10",
-    "@types/react-native": "^0.72.8",
-    "typescript": "~5.8.3"
+    "@babel/core": "^7.20.0"
   },
-  "private": true,
-  "description": "",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/mahavarshini08/Rydz-safetyApp.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
-  "bugs": {
-    "url": "https://github.com/mahavarshini08/Rydz-safetyApp/issues"
-  },
-  "homepage": "https://github.com/mahavarshini08/Rydz-safetyApp#readme"
+  "private": true
 }
