--- a/frontend/backend/package.json
+++ b/frontend/backend/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "rydz-safetyapp-backend",
+  "name": "backend",
   "version": "1.0.0",
-  "main": "server1.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "node ride-tracking-server/server.js",
-    "dev": "nodemon ride-tracking-server/server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "mongoose": "^8.18.0",
-    "node-fetch": "^3.3.2",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
