--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,7 +29,8 @@
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "nodemon": "^3.1.10"
   },
   "private": true
 }
