--- a/.gitignore
+++ b/.gitignore
@@ -9,16 +9,7 @@ dist/
 web-build/
 expo-env.d.ts
 
-# Native
-.kotlin/
-*.orig.*
-*.jks
-*.p8
-*.p12
-*.key
-*.mobileprovision
-
-# Metro
+# Metro bundler
 .metro-health-check*
 
 # debug
@@ -26,12 +17,17 @@ npm-debug.*
 yarn-debug.*
 yarn-error.*
 
-# macOS
-.DS_Store
-*.pem
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
 
 # local env files
 .env*.local
 
 # typescript
 *.tsbuildinfo
+
+# Firebase
+serviceAccountKey.json
+.env
