--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,8 +29,7 @@
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "nodemon": "^3.1.10"
+    "@babel/core": "^7.20.0"
   },
   "private": true
 }
