--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/native": "^7.1.16",
     "@react-navigation/native-stack": "^7.3.23",
     "expo": "~53.0.22",
@@ -20,16 +20,18 @@
     "expo-status-bar": "~2.2.3",
     "expo-task-manager": "~13.1.6",
     "geolib": "^3.3.4",
-    "react": "18.3.1",
-    "react-native": "0.76.3",
+    "react": "19.0.0",
+    "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
-    "react-native-maps": "^1.20.1",
+    "react-native-maps": "1.20.1",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "typescript": "~5.8.3",
+    "@types/react": "~19.0.10"
   },
   "private": true
 }
