--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rydz-safetyapp",
+  "name": "rydz-safety-app-frontend",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,30 +9,43 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-navigation/native": "^7.1.16",
-    "@react-navigation/native-stack": "^7.3.23",
-    "expo": "~53.0.22",
+    "@mapbox/polyline": "^1.2.1",
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-firebase/app": "^23.2.0",
+    "@react-native-firebase/auth": "^23.2.0",
+    "@react-native-firebase/firestore": "^23.2.0",
+    "@react-native-firebase/messaging": "^23.2.0",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/native-stack": "^7.3.25",
+    "@types/react": "~19.0.10",
+    "expo": "53.0.22",
     "expo-device": "~7.1.4",
     "expo-location": "~18.1.6",
-    "expo-notifications": "~0.31.4",
+    "expo-notifications": "^0.31.4",
     "expo-sms": "~13.1.4",
-    "expo-status-bar": "~2.2.3",
     "expo-task-manager": "~13.1.6",
     "firebase": "^12.2.1",
     "geolib": "^3.3.4",
     "react": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-animatable": "^1.4.0",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-google-places-autocomplete": "^2.5.7",
     "react-native-maps": "1.20.1",
+    "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
+    "react-native-vector-icons": "^10.3.0",
+    "react-native-webview": "13.13.5",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.21.4",
+    "@types/geolib": "^2.0.3",
     "@types/react": "~19.0.10",
-    "typescript": "~5.8.3"
+    "@types/socket.io-client": "^1.4.36",
+    "expo": "53.0.22"
   },
   "private": true
 }
