--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rydz-safety-app-frontend",
+  "name": "flare-safety-app-frontend",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -45,7 +45,8 @@
     "@types/geolib": "^2.0.3",
     "@types/react": "~19.0.10",
     "@types/socket.io-client": "^1.4.36",
-    "expo": "53.0.22"
+    "expo": "53.0.22",
+    "typescript": "~5.8.3"
   },
   "private": true
 }
